# pcmci_rust

./: .gitignore  README.md  requirements.txt
.github/workflows/: CI.yml
pcmcirust/: Cargo.toml
pcmcirust/src/: lib.rs
pcmcirustpy/: Cargo.toml  benchmark.ipynb  benchmark_utils.py  tests.ipynb
pcmcirustpy/notebooks/: benchmark_synthetic.ipynb  tests_FRED.ipynb  tests_synthetic.ipynb
pcmcirustpy/notebooks/src/: benchmark_utils.py
pcmcirustpy/src/: lib.rs
pcmcirustr/: DESCRIPTION  NAMESPACE
pcmcirustr/R/: extendr-wrappers.R
pcmcirustr/scripts/: tests_synthetic.R
pcmcirustr/src/: .gitignore  Makevars  Makevars.win  entrypoint.c  pcmcirustr-win.def
pcmcirustr/src/rust/: Cargo.toml
pcmcirustr/src/rust/src/: lib.rs
