[package]
name = "pcmcirust"
version = "1.0.0"
edition = "2024"

[lib]
name = "pcmcirust"
path = "src/lib.rs"

[features]
default = []
blas = ["ndarray-linalg/openblas-system"]

[dependencies]
ndarray = "0.16.1"
ndarray-parallel = "0.9.1"
rayon = "1.10.0"
statrs = "0.18.0"

[target.'cfg(windows)'.dependencies]
ndarray-linalg = { version = "0.17.0", features = ["openblas-system"] }

[target.'cfg(not(windows))'.dependencies]
ndarray-linalg = "0.17.0"
