[package]
name = "pcmcirust"
version = "1.0.0"
edition = "2024"

[lib]
name = "pcmcirust"
path = "src/lib.rs"

[dependencies]
ndarray = "0.16.1"
ndarray-parallel = "0.9.1"
rayon = "1.10.0"
statrs = "0.18.0"

[target.'cfg(windows)'.dependencies]
ndarray-linalg = { version = "0.17.0", features = ["intel-mkl"] }

[target.'cfg(not(windows))'.dependencies]
ndarray-linalg = { version = "0.17.0", features = ["openblas-static"] }