[package]
name = "pcmcirustpy"
version = "1.0.0"
edition = "2024"

[lib]
name = "pcmcirustpy"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib", "rlib"]

[features]
default = []
blas = ["pcmcirust/blas"]

[dependencies]
numpy = "0.24.0"
pyo3 = { version = "0.24.2", features = ["extension-module"] }
pcmcirust = { path = "pcmcirust" }
